[package]
name = "rust_by_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "chapter3_1"
path = "src/chapter3/1.rs"

[[bin]]
name = "chapter3_2"
path = "src/chapter3/2.rs"

[[bin]]
name = "chapter3_3"
path = "src/chapter3/3.rs"

[[bin]]
name = "chapter3_4"
path = "src/chapter3/4.rs"

[[bin]]
name = "chapter3_5"
path = "src/chapter3/5.rs"

[[bin]]
name = "chapter3_6"
path = "src/chapter3/6.rs"

[[bin]]
name = "chapter3_7"
path = "src/chapter3/7.rs"

[[bin]]
name = "chapter3_8"
path = "src/chapter3/8.rs"

[[bin]]
name = "chapter3_9"
path = "src/chapter3/9.rs"

[[bin]]
name = "chapter4_1_1"
path = "src/chapter4/chapter4_1/1.rs"

[[bin]]
name = "chapter4_1_2"
path = "src/chapter4/chapter4_1/2.rs"

[[bin]]
name = "chapter4_1_3"
path = "src/chapter4/chapter4_1/3.rs"

[[bin]]
name = "chapter4_1_4"
path = "src/chapter4/chapter4_1/4.rs"

[[bin]]
name = "chapter4_1_5"
path = "src/chapter4/chapter4_1/5.rs"

[[bin]]
name = "chapter4_1_6"
path = "src/chapter4/chapter4_1/6.rs"

[[bin]]
name = "chapter4_1_7"
path = "src/chapter4/chapter4_1/7.rs"

[[bin]]
name = "chapter4_1_8"
path = "src/chapter4/chapter4_1/8.rs"

[[bin]]
name = "chapter4_1_9"
path = "src/chapter4/chapter4_1/9.rs"

[[bin]]
name = "chapter4_1_10"
path = "src/chapter4/chapter4_1/10.rs"

[[bin]]
name = "chapter4_1_11"
path = "src/chapter4/chapter4_1/11.rs"

[[bin]]
name = "chapter4_2_1"
path = "src/chapter4/chapter4_2/1.rs"

[[bin]]
name = "chapter4_2_2"
path = "src/chapter4/chapter4_2/2.rs"

[[bin]]
name = "chapter4_2_3"
path = "src/chapter4/chapter4_2/3.rs"

[[bin]]
name = "chapter4_2_4"
path = "src/chapter4/chapter4_2/4.rs"

[[bin]]
name = "chapter4_2_5"
path = "src/chapter4/chapter4_2/5.rs"

[[bin]]
name = "chapter4_2_6"
path = "src/chapter4/chapter4_2/6.rs"

[[bin]]
name = "chapter4_3_1"
path = "src/chapter4/chapter4_3/1.rs"

[[bin]]
name = "chapter4_3_2"
path = "src/chapter4/chapter4_3/2.rs"

[[bin]]
name = "chapter4_3_3"
path = "src/chapter4/chapter4_3/3.rs"

[[bin]]
name = "chapter4_4_1"
path = "src/chapter4/chapter4_4/1.rs"

[[bin]]
name = "chapter4_4_2"
path = "src/chapter4/chapter4_4/2.rs"

[[bin]]
name = "chapter4_4_3"
path = "src/chapter4/chapter4_4/3.rs"

[[bin]]
name = "chapter4_4_4"
path = "src/chapter4/chapter4_4/4.rs"

[[bin]]
name = "chapter4_4_5"
path = "src/chapter4/chapter4_4/5.rs"

[[bin]]
name = "chapter5_1_1"
path = "src/chapter5/chapter5_1/1.rs"

[[bin]]
name = "chapter5_1_2"
path = "src/chapter5/chapter5_1/2.rs"

[[bin]]
name = "chapter5_1_3"
path = "src/chapter5/chapter5_1/3.rs"

[[bin]]
name = "chapter5_1_4"
path = "src/chapter5/chapter5_1/4.rs"

[[bin]]
name = "chapter5_1_5"
path = "src/chapter5/chapter5_1/5.rs"

[[bin]]
name = 'chapter5_1_6'
path = 'src/chapter5/chapter5_1/6.rs'

[[bin]]
name = 'chapter5_1_7'
path = 'src/chapter5/chapter5_1/7.rs'

[[bin]]
name = 'chapter5_1_8'
path = 'src/chapter5/chapter5_1/8.rs'

[[bin]]
name = 'chapter5_1_9'
path = 'src/chapter5/chapter5_1/9.rs'

[[bin]]
name = 'chapter5_2_1'
path = 'src/chapter5/chapter5_2/1.rs'

[[bin]]
name = 'chapter5_2_2'
path = 'src/chapter5/chapter5_2/2.rs'

[[bin]]
name = 'chapter5_2_3'
path = 'src/chapter5/chapter5_2/3.rs'

[[bin]]
name = 'chapter5_2_4'
path = 'src/chapter5/chapter5_2/4.rs'

[[bin]]
name = 'chapter5_2_5'
path = 'src/chapter5/chapter5_2/5.rs'

[[bin]]
name = 'chapter5_2_6'
path = 'src/chapter5/chapter5_2/6.rs'

[[bin]]
name = 'chapter5_2_7'
path = 'src/chapter5/chapter5_2/7.rs'

[[bin]]
name = 'chapter5_2_8'
path = 'src/chapter5/chapter5_2/8.rs'

[[bin]]
name = 'chapter5_2_9'
path = 'src/chapter5/chapter5_2/9.rs'

[[bin]]
name = 'chapter5_2_10'
path = 'src/chapter5/chapter5_2/10.rs'

[[bin]]
name = 'chapter5_2_11'
path = 'src/chapter5/chapter5_2/11.rs'