[package]
name = "rust_by_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "chapter3_1"
path = "src/chapter3/1.rs"

[[bin]]
name = "chapter3_2"
path = "src/chapter3/2.rs"

[[bin]]
name = "chapter3_3"
path = "src/chapter3/3.rs"

[[bin]]
name = "chapter3_4"
path = "src/chapter3/4.rs"

[[bin]]
name = "chapter3_5"
path = "src/chapter3/5.rs"

[[bin]]
name = "chapter3_6"
path = "src/chapter3/6.rs"

[[bin]]
name = "chapter3_7"
path = "src/chapter3/7.rs"

[[bin]]
name = "chapter3_8"
path = "src/chapter3/8.rs"

[[bin]]
name = "chapter3_9"
path = "src/chapter3/9.rs"

[[bin]]
name = "chapter4_1_1"
path = "src/chapter4/chapter4_1/1.rs"

[[bin]]
name = "chapter4_1_2"
path = "src/chapter4/chapter4_1/2.rs"

[[bin]]
name = "chapter4_1_3"
path = "src/chapter4/chapter4_1/3.rs"

[[bin]]
name = "chapter4_1_4"
path = "src/chapter4/chapter4_1/4.rs"

[[bin]]
name = "chapter4_1_5"
path = "src/chapter4/chapter4_1/5.rs"

[[bin]]
name = "chapter4_1_6"
path = "src/chapter4/chapter4_1/6.rs"

[[bin]]
name = "chapter4_1_7"
path = "src/chapter4/chapter4_1/7.rs"

[[bin]]
name = "chapter4_1_8"
path = "src/chapter4/chapter4_1/8.rs"

[[bin]]
name = "chapter4_1_9"
path = "src/chapter4/chapter4_1/9.rs"

[[bin]]
name = "chapter4_1_10"
path = "src/chapter4/chapter4_1/10.rs"

[[bin]]
name = "chapter4_1_11"
path = "src/chapter4/chapter4_1/11.rs"

[[bin]]
name = "chapter4_2_1"
path = "src/chapter4/chapter4_2/1.rs"

[[bin]]
name = "chapter4_2_2"
path = "src/chapter4/chapter4_2/2.rs"

[[bin]]
name = "chapter4_2_3"
path = "src/chapter4/chapter4_2/3.rs"

[[bin]]
name = "chapter4_2_4"
path = "src/chapter4/chapter4_2/4.rs"

[[bin]]
name = "chapter4_2_5"
path = "src/chapter4/chapter4_2/5.rs"

[[bin]]
name = "chapter4_2_6"
path = "src/chapter4/chapter4_2/6.rs"

[[bin]]
name = "chapter4_3_1"
path = "src/chapter4/chapter4_3/1.rs"

[[bin]]
name = "chapter4_3_2"
path = "src/chapter4/chapter4_3/2.rs"

[[bin]]
name = "chapter4_3_3"
path = "src/chapter4/chapter4_3/3.rs"

[[bin]]
name = "chapter4_4_1"
path = "src/chapter4/chapter4_4/1.rs"

[[bin]]
name = "chapter4_4_2"
path = "src/chapter4/chapter4_4/2.rs"

[[bin]]
name = "chapter4_4_3"
path = "src/chapter4/chapter4_4/3.rs"

[[bin]]
name = "chapter4_4_4"
path = "src/chapter4/chapter4_4/4.rs"

[[bin]]
name = "chapter4_4_5"
path = "src/chapter4/chapter4_4/5.rs"

[[bin]]
name = "chapter5_1_1"
path = "src/chapter5/chapter5_1/1.rs"

[[bin]]
name = "chapter5_1_2"
path = "src/chapter5/chapter5_1/2.rs"

[[bin]]
name = "chapter5_1_3"
path = "src/chapter5/chapter5_1/3.rs"

[[bin]]
name = "chapter5_1_4"
path = "src/chapter5/chapter5_1/4.rs"

[[bin]]
name = "chapter5_1_5"
path = "src/chapter5/chapter5_1/5.rs"

[[bin]]
name = 'chapter5_1_6'
path = 'src/chapter5/chapter5_1/6.rs'

[[bin]]
name = 'chapter5_1_7'
path = 'src/chapter5/chapter5_1/7.rs'

[[bin]]
name = 'chapter5_1_8'
path = 'src/chapter5/chapter5_1/8.rs'

[[bin]]
name = 'chapter5_1_9'
path = 'src/chapter5/chapter5_1/9.rs'

[[bin]]
name = 'chapter5_2_1'
path = 'src/chapter5/chapter5_2/1.rs'

[[bin]]
name = 'chapter5_2_2'
path = 'src/chapter5/chapter5_2/2.rs'

[[bin]]
name = 'chapter5_2_3'
path = 'src/chapter5/chapter5_2/3.rs'

[[bin]]
name = 'chapter5_2_4'
path = 'src/chapter5/chapter5_2/4.rs'

[[bin]]
name = 'chapter5_2_5'
path = 'src/chapter5/chapter5_2/5.rs'

[[bin]]
name = 'chapter5_2_6'
path = 'src/chapter5/chapter5_2/6.rs'

[[bin]]
name = 'chapter5_2_7'
path = 'src/chapter5/chapter5_2/7.rs'

[[bin]]
name = 'chapter5_2_8'
path = 'src/chapter5/chapter5_2/8.rs'

[[bin]]
name = 'chapter5_2_9'
path = 'src/chapter5/chapter5_2/9.rs'

[[bin]]
name = 'chapter5_2_10'
path = 'src/chapter5/chapter5_2/10.rs'

[[bin]]
name = 'chapter5_2_11'
path = 'src/chapter5/chapter5_2/11.rs'

[[bin]]
name = 'chapter6_1_1'
path = 'src/chapter6/chapter6_1/1.rs'

[[bin]]
name = 'chapter6_1_2'
path = 'src/chapter6/chapter6_1/2.rs'

[[bin]]
name = 'chapter6_1_3'
path = 'src/chapter6/chapter6_1/3.rs'

[[bin]]
name = 'chapter6_1_4'
path = 'src/chapter6/chapter6_1/4.rs'

[[bin]]
name = 'chapter6_1_5'
path = 'src/chapter6/chapter6_1/5.rs'

[[bin]]
name = 'chapter6_1_6'
path = 'src/chapter6/chapter6_1/6.rs'

[[bin]]
name = 'chapter6_1_7'
path = 'src/chapter6/chapter6_1/7.rs'

[[bin]]
name = 'chapter6_1_8'
path = 'src/chapter6/chapter6_1/8.rs'

[[bin]]
name = 'chapter6_1_9'
path = 'src/chapter6/chapter6_1/9.rs'

[[bin]]
name = 'chapter6_1_10'
path = 'src/chapter6/chapter6_1/10.rs'

[[bin]]
name = 'chapter6_1_11'
path = 'src/chapter6/chapter6_1/11.rs'

[[bin]]
name = 'chapter6_1_12'
path = 'src/chapter6/chapter6_1/12.rs'

[[bin]]
name = 'chapter6_2_1'
path = 'src/chapter6/chapter6_2/1.rs'

[[bin]]
name = 'chapter6_2_2'
path = 'src/chapter6/chapter6_2/2.rs'

[[bin]]
name = 'chapter6_2_3'
path = 'src/chapter6/chapter6_2/3.rs'

[[bin]]
name = 'chapter6_2_4'
path = 'src/chapter6/chapter6_2/4.rs'

[[bin]]
name = 'chapter6_2_5'
path = 'src/chapter6/chapter6_2/5.rs'

[[bin]]
name = 'chapter6_2_6'
path = 'src/chapter6/chapter6_2/6.rs'

[[bin]]
name = 'chapter6_4_1'
path = 'src/chapter6/chapter6_4/1.rs'

[[bin]]
name = 'chapter6_4_2'
path = 'src/chapter6/chapter6_4/2.rs'

[[bin]]
name = 'chapter6_4_3'
path = 'src/chapter6/chapter6_4/3.rs'

[[bin]]
name = 'chapter6_4_4'
path = 'src/chapter6/chapter6_4/4.rs'

[[bin]]
name = 'chapter6_4_5'
path = 'src/chapter6/chapter6_4/5.rs'

[[bin]]
name = 'chapter6_4_6'
path = 'src/chapter6/chapter6_4/6.rs'

[[bin]]
name = 'chapter6_5_1'
path = 'src/chapter6/chapter6_5/1.rs'

[[bin]]
name = 'chapter6_5_2'
path = 'src/chapter6/chapter6_5/2.rs'

[[bin]]
name = 'chapter6_5_3'
path = 'src/chapter6/chapter6_5/3.rs'

[[bin]]
name = 'chapter6_5_4'
path = 'src/chapter6/chapter6_5/4.rs'

[[bin]]
name = 'chapter6_5_5'
path = 'src/chapter6/chapter6_5/5.rs'

[[bin]]
name = 'chapter6_5_6'
path = 'src/chapter6/chapter6_5/6.rs'

[[bin]]
name = 'chapter6_5_7'
path = 'src/chapter6/chapter6_5/7.rs'

[[bin]]
name = 'chapter6_5_8'
path = 'src/chapter6/chapter6_5/8.rs'

[[bin]]
name = 'chapter6_6_1'
path = 'src/chapter6/chapter6_6/1.rs'

[[bin]]
name = 'chapter6_6_2'
path = 'src/chapter6/chapter6_6/2.rs'

[[bin]]
name = 'chapter6_6_3'
path = 'src/chapter6/chapter6_6/3.rs'

[[bin]]
name = 'chapter6_6_4'
path = 'src/chapter6/chapter6_6/4.rs'

[[bin]]
name = 'chapter6_6_5'
path = 'src/chapter6/chapter6_6/5.rs'

[[bin]]

name = 'chapter6_6_6'
path = 'src/chapter6/chapter6_6/6.rs'

[[bin]]

name = 'chapter7_1'
path = 'src/chapter7/1.rs'

[[bin]]

name = 'chapter7_2'
path = 'src/chapter7/2.rs'

[[bin]]

name = 'chapter7_3'
path = 'src/chapter7/3.rs'

[[bin]]

name = 'chapter7_4'
path = 'src/chapter7/4.rs'

[[bin]]

name = 'chapter7_5'
path = 'src/chapter7/5.rs'

[[bin]]

name = 'chapter7_6'
path = 'src/chapter7/6.rs'

[[bin]]

name = 'chapter7_7'
path = 'src/chapter7/7.rs'

[[bin]]

name = 'chapter7_8'
path = 'src/chapter7/8.rs'

[[bin]]

name = 'chapter7_9'
path = 'src/chapter7/9.rs'

[[bin]]

name = 'chapter7_10'
path = 'src/chapter7/10.rs'

[[bin]]

name = 'chapter7_11'
path = 'src/chapter7/11.rs'


[[bin]]

name = 'chapter8_1_1'
path = 'src/chapter8/1/1.rs'

[[bin]]

name = 'chapter8_1_2'
path = 'src/chapter8/1/2.rs'

[[bin]]

name = 'chapter8_1_3'
path = 'src/chapter8/1/3.rs'

[[bin]]

name = 'chapter8_1_4'
path = 'src/chapter8/1/4.rs'

[[bin]]

name = 'chapter8_1_5'
path = 'src/chapter8/1/5.rs'

[[bin]]

name = 'chapter8_1_6'
path = 'src/chapter8/1/6.rs'

[[bin]]

name = 'chapter8_1_7'
path = 'src/chapter8/1/7.rs'

[[bin]]

name = 'chapter8_1_8'
path = 'src/chapter8/1/8.rs'

[[bin]]

name = 'chapter8_1_9'
path = 'src/chapter8/1/9.rs'

[[bin]]

name = 'chapter8_2_1'
path = 'src/chapter8/2/1.rs'

[[bin]]

name = 'chapter8_2_2'
path = 'src/chapter8/2/2.rs'

[[bin]]

name = 'chapter8_2_3'
path = 'src/chapter8/2/3.rs'

[[bin]]

name = 'chapter8_2_4'
path = 'src/chapter8/2/4.rs'

[[bin]]

name = 'chapter8_2_5'
path = 'src/chapter8/2/5.rs'

[[bin]]

name = 'chapter8_2_6'
path = 'src/chapter8/2/6.rs'